clusters/homelab/apps/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - port: 80
      targetPort: 9696
      protocol: TCP
      name: http
  type: ClusterIP
